ingress-tls/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: webapp
  annotations:
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  ingressClassName: kong
  tls:
  - hosts:
      - webapp.dev.mme-lab.io
    secretName: webapp-cert
  rules:
  - host: webapp.dev.mme-lab.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 80
